tests/reference/asr-test_list_const-7b77194.stderr
semantic error: cannot append element to a const list
 --> tests/errors/test_list_const.py:6:5
  |
6 |     CONST_INTEGER_LIST.append(6)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
